// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PlanCard /> Snapshots should match snapshot PlanCard with ribbon 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "elevation": 4,
          "shadowColor": "rgba(152, 152, 166, 0.25)",
          "shadowOffset": Object {
            "height": 2,
            "width": 0,
          },
          "shadowOpacity": 1,
          "shadowRadius": 6,
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#FFFFFF",
            "borderRadius": 8,
            "elevation": 4,
            "overflow": "hidden",
            "paddingBottom": 16,
            "paddingLeft": 16,
            "paddingRight": 16,
            "paddingTop": 16,
          },
          Object {
            "maxWidth": 280,
            "width": "100%",
          },
        ]
      }
      variant=""
      variantIntensity={2}
    >
      <View
        style={
          Array [
            Object {
              "alignSelf": "flex-start",
              "backgroundColor": "#F5F5FA",
              "borderBottomRightRadius": 9999,
              "borderTopRightRadius": 9999,
              "color": undefined,
              "marginBottom": 16,
              "marginLeft": -16,
              "paddingBottom": 4,
              "paddingLeft": 16,
              "paddingRight": 12,
              "paddingTop": 4,
            },
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": undefined,
                "fontFamily": "Rubik",
                "fontSize": 12,
                "fontWeight": "400",
                "lineHeight": 16,
              },
            ]
          }
        >
          Label
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`<PlanCard /> Snapshots should match snapshot PlanCard with secondary ribbon 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "elevation": 4,
          "shadowColor": "rgba(152, 152, 166, 0.25)",
          "shadowOffset": Object {
            "height": 2,
            "width": 0,
          },
          "shadowOpacity": 1,
          "shadowRadius": 6,
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#FFFFFF",
            "borderRadius": 8,
            "elevation": 4,
            "overflow": "hidden",
            "paddingBottom": 16,
            "paddingLeft": 16,
            "paddingRight": 16,
            "paddingTop": 16,
          },
          Object {
            "maxWidth": 280,
            "width": "100%",
          },
        ]
      }
      variant=""
      variantIntensity={2}
    >
      <View
        style={
          Array [
            Object {
              "alignSelf": "flex-start",
              "backgroundColor": "#D8385E",
              "borderBottomRightRadius": 9999,
              "borderTopRightRadius": 9999,
              "color": "#FFFFFF",
              "marginBottom": 16,
              "marginLeft": -16,
              "paddingBottom": 4,
              "paddingLeft": 16,
              "paddingRight": 12,
              "paddingTop": 4,
            },
          ]
        }
        variant="secondary"
      >
        <Text
          style={
            Array [
              Object {
                "color": "#FFFFFF",
                "fontFamily": "Rubik",
                "fontSize": 12,
                "fontWeight": "400",
                "lineHeight": 16,
              },
            ]
          }
          variant="secondary"
        >
          Label
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`<PlanCard /> Snapshots should match snapshot PlanCard with tertiary ribbon 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "elevation": 4,
          "shadowColor": "rgba(152, 152, 166, 0.25)",
          "shadowOffset": Object {
            "height": 2,
            "width": 0,
          },
          "shadowOpacity": 1,
          "shadowRadius": 6,
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#FFFFFF",
            "borderRadius": 8,
            "elevation": 4,
            "overflow": "hidden",
            "paddingBottom": 16,
            "paddingLeft": 16,
            "paddingRight": 16,
            "paddingTop": 16,
          },
          Object {
            "maxWidth": 280,
            "width": "100%",
          },
        ]
      }
      variant=""
      variantIntensity={2}
    >
      <View
        style={
          Array [
            Object {
              "alignSelf": "flex-start",
              "backgroundColor": undefined,
              "borderBottomRightRadius": 9999,
              "borderTopRightRadius": 9999,
              "color": "#FFFFFF",
              "marginBottom": 16,
              "marginLeft": -16,
              "paddingBottom": 4,
              "paddingLeft": 16,
              "paddingRight": 12,
              "paddingTop": 4,
            },
          ]
        }
        variant="tertiary"
      >
        <Text
          style={
            Array [
              Object {
                "color": "#FFFFFF",
                "fontFamily": "Rubik",
                "fontSize": 12,
                "fontWeight": "400",
                "lineHeight": 16,
              },
            ]
          }
          variant="tertiary"
        >
          Label
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`<PlanCard /> Snapshots should match snapshot default PlanCard with Content 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "elevation": 4,
          "shadowColor": "rgba(152, 152, 166, 0.25)",
          "shadowOffset": Object {
            "height": 2,
            "width": 0,
          },
          "shadowOpacity": 1,
          "shadowRadius": 6,
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#FFFFFF",
            "borderRadius": 8,
            "elevation": 4,
            "overflow": "hidden",
            "paddingBottom": 16,
            "paddingLeft": 16,
            "paddingRight": 16,
            "paddingTop": 16,
          },
          Object {
            "maxWidth": 280,
            "width": "100%",
          },
        ]
      }
      variant=""
      variantIntensity={2}
    >
      <View
        style={
          Array [
            Object {},
          ]
        }
      >
        <Text
          numberOfLines={2}
          style={
            Array [
              Object {
                "color": undefined,
                "fontFamily": "Rubik",
                "fontSize": 14,
                "fontWeight": "400",
                "height": 40,
                "lineHeight": 20,
                "marginBottom": 12,
                "marginTop": 8,
              },
            ]
          }
          variant=""
        >
          Gympass Black for employees with Buddha Spa + Reebook included
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": undefined,
                "fontFamily": "Rubik",
                "fontSize": 20,
                "fontWeight": "500",
                "lineHeight": 28,
                "marginTop": 12,
              },
            ]
          }
          variant=""
        >
          U$ 99.90
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": undefined,
                "fontFamily": "Rubik",
                "fontSize": 14,
                "fontWeight": "400",
                "lineHeight": 20,
                "marginBottom": 8,
              },
            ]
          }
          variant=""
        >
          /month
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`<PlanCard /> Snapshots should match snapshot variant PlanCard with Content 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "elevation": 4,
          "shadowColor": "rgba(152, 152, 166, 0.25)",
          "shadowOffset": Object {
            "height": 2,
            "width": 0,
          },
          "shadowOpacity": 1,
          "shadowRadius": 6,
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#D8385E",
            "borderRadius": 8,
            "elevation": 4,
            "overflow": "hidden",
            "paddingBottom": 16,
            "paddingLeft": 16,
            "paddingRight": 16,
            "paddingTop": 16,
          },
          Object {
            "maxWidth": 280,
            "width": "100%",
          },
        ]
      }
      variant="secondary"
      variantIntensity={2}
    >
      <View
        style={
          Array [
            Object {},
          ]
        }
      >
        <Text
          numberOfLines={2}
          style={
            Array [
              Object {
                "color": "#FFFFFF",
                "fontFamily": "Rubik",
                "fontSize": 14,
                "fontWeight": "400",
                "height": 40,
                "lineHeight": 20,
                "marginBottom": 12,
                "marginTop": 8,
              },
            ]
          }
          variant="secondary"
        >
          Gympass Black for employees with Buddha Spa + Reebook included
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "#FFFFFF",
                "fontFamily": "Rubik",
                "fontSize": 20,
                "fontWeight": "500",
                "lineHeight": 28,
                "marginTop": 12,
              },
            ]
          }
          variant="secondary"
        >
          U$ 99.90
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "#FFFFFF",
                "fontFamily": "Rubik",
                "fontSize": 14,
                "fontWeight": "400",
                "lineHeight": 20,
                "marginBottom": 8,
              },
            ]
          }
          variant="secondary"
        >
          /month
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`<PlanCard /> Snapshots should match snapshot with default PlanCard 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "elevation": 4,
          "shadowColor": "rgba(152, 152, 166, 0.25)",
          "shadowOffset": Object {
            "height": 2,
            "width": 0,
          },
          "shadowOpacity": 1,
          "shadowRadius": 6,
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#FFFFFF",
            "borderRadius": 8,
            "elevation": 4,
            "overflow": "hidden",
            "paddingBottom": 16,
            "paddingLeft": 16,
            "paddingRight": 16,
            "paddingTop": 16,
          },
          Object {
            "maxWidth": 280,
            "width": "100%",
          },
        ]
      }
      variant=""
      variantIntensity={2}
    >
      <View
        style={
          Array [
            Object {},
          ]
        }
      >
        Gympass PlanCard
      </View>
      <View
        style={
          Array [
            Object {},
          ]
        }
      >
        <Text
          numberOfLines={2}
          style={
            Array [
              Object {
                "color": undefined,
                "fontFamily": "Rubik",
                "fontSize": 14,
                "fontWeight": "400",
                "height": 40,
                "lineHeight": 20,
                "marginBottom": 12,
                "marginTop": 8,
              },
            ]
          }
          variant=""
        >
          Gympass Black for employees with Buddha Spa + Reebook included
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": undefined,
                "fontFamily": "Rubik",
                "fontSize": 20,
                "fontWeight": "500",
                "lineHeight": 28,
                "marginTop": 12,
              },
            ]
          }
          variant=""
        >
          U$ 99.90
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": undefined,
                "fontFamily": "Rubik",
                "fontSize": 14,
                "fontWeight": "400",
                "lineHeight": 20,
                "marginBottom": 8,
              },
            ]
          }
          variant=""
        >
          /month
        </Text>
        content's children is rendered
      </View>
      <View
        style={
          Array [
            Object {
              "paddingTop": 8,
            },
          ]
        }
      >
        <View
          lastChild={true}
          style={
            Array [
              Object {
                "display": "flex",
              },
            ]
          }
        >
          <TouchableWithoutFeedback>
            <View
              style={
                Object {
                  "flexDirection": "row",
                }
              }
            >
              <View
                disabled={false}
                full={false}
                inverted={false}
                pressed={false}
                small={false}
                style={
                  Array [
                    Object {
                      "backgroundColor": "#231B22",
                      "borderRadius": 9999,
                      "height": 48,
                      "justifyContent": "center",
                      "paddingLeft": 24,
                      "paddingRight": 24,
                    },
                  ]
                }
              >
                <Text
                  disabled={false}
                  inverted={false}
                  pressed={false}
                  style={
                    Array [
                      Object {
                        "color": "#FFFFFF",
                        "fontFamily": "Rubik",
                        "fontSize": 14,
                        "fontWeight": "700",
                        "textAlign": "center",
                      },
                    ]
                  }
                >
                  should have buttons
                </Text>
              </View>
            </View>
          </TouchableWithoutFeedback>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`<PlanCard /> Snapshots should match snapshot with secondary PlanCard 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "elevation": 4,
          "shadowColor": "rgba(152, 152, 166, 0.25)",
          "shadowOffset": Object {
            "height": 2,
            "width": 0,
          },
          "shadowOpacity": 1,
          "shadowRadius": 6,
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#D8385E",
            "borderRadius": 8,
            "elevation": 4,
            "overflow": "hidden",
            "paddingBottom": 16,
            "paddingLeft": 16,
            "paddingRight": 16,
            "paddingTop": 16,
          },
          Object {
            "maxWidth": 280,
            "width": "100%",
          },
        ]
      }
      variant="secondary"
      variantIntensity={2}
    >
      <View
        style={
          Array [
            Object {},
          ]
        }
      >
        Gympass PlanCard
      </View>
      <View
        style={
          Array [
            Object {},
          ]
        }
      >
        <Text
          numberOfLines={2}
          style={
            Array [
              Object {
                "color": "#FFFFFF",
                "fontFamily": "Rubik",
                "fontSize": 14,
                "fontWeight": "400",
                "height": 40,
                "lineHeight": 20,
                "marginBottom": 12,
                "marginTop": 8,
              },
            ]
          }
          variant="secondary"
        >
          Gympass Black for employees with Buddha Spa + Reebook included
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "#FFFFFF",
                "fontFamily": "Rubik",
                "fontSize": 20,
                "fontWeight": "500",
                "lineHeight": 28,
                "marginTop": 12,
              },
            ]
          }
          variant="secondary"
        >
          U$ 99.90
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "#FFFFFF",
                "fontFamily": "Rubik",
                "fontSize": 14,
                "fontWeight": "400",
                "lineHeight": 20,
                "marginBottom": 8,
              },
            ]
          }
          variant="secondary"
        >
          /month
        </Text>
        content's children is rendered
      </View>
      <View
        style={
          Array [
            Object {
              "paddingTop": 8,
            },
          ]
        }
      >
        <View
          lastChild={true}
          style={
            Array [
              Object {
                "display": "flex",
              },
            ]
          }
        >
          <TouchableWithoutFeedback>
            <View
              style={
                Object {
                  "flexDirection": "row",
                }
              }
            >
              <View
                disabled={false}
                full={false}
                inverted={false}
                pressed={false}
                small={false}
                style={
                  Array [
                    Object {
                      "backgroundColor": "#231B22",
                      "borderRadius": 9999,
                      "height": 48,
                      "justifyContent": "center",
                      "paddingLeft": 24,
                      "paddingRight": 24,
                    },
                  ]
                }
              >
                <Text
                  disabled={false}
                  inverted={false}
                  pressed={false}
                  style={
                    Array [
                      Object {
                        "color": "#FFFFFF",
                        "fontFamily": "Rubik",
                        "fontSize": 14,
                        "fontWeight": "700",
                        "textAlign": "center",
                      },
                    ]
                  }
                >
                  should have buttons
                </Text>
              </View>
            </View>
          </TouchableWithoutFeedback>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`<PlanCard /> Snapshots should match snapshot with tertiary PlanCard 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "elevation": 4,
          "shadowColor": "rgba(152, 152, 166, 0.25)",
          "shadowOffset": Object {
            "height": 2,
            "width": 0,
          },
          "shadowOpacity": 1,
          "shadowRadius": 6,
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": undefined,
            "borderRadius": 8,
            "elevation": 4,
            "overflow": "hidden",
            "paddingBottom": 16,
            "paddingLeft": 16,
            "paddingRight": 16,
            "paddingTop": 16,
          },
          Object {
            "maxWidth": 280,
            "width": "100%",
          },
        ]
      }
      variant="tertiary"
      variantIntensity={2}
    >
      <View
        style={
          Array [
            Object {},
          ]
        }
      >
        Gympass PlanCard
      </View>
      <View
        style={
          Array [
            Object {},
          ]
        }
      >
        <Text
          numberOfLines={2}
          style={
            Array [
              Object {
                "color": "#FFFFFF",
                "fontFamily": "Rubik",
                "fontSize": 14,
                "fontWeight": "400",
                "height": 40,
                "lineHeight": 20,
                "marginBottom": 12,
                "marginTop": 8,
              },
            ]
          }
          variant="tertiary"
        >
          Gympass Black for employees with Buddha Spa + Reebook included
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "#FFFFFF",
                "fontFamily": "Rubik",
                "fontSize": 20,
                "fontWeight": "500",
                "lineHeight": 28,
                "marginTop": 12,
              },
            ]
          }
          variant="tertiary"
        >
          U$ 99.90
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "#FFFFFF",
                "fontFamily": "Rubik",
                "fontSize": 14,
                "fontWeight": "400",
                "lineHeight": 20,
                "marginBottom": 8,
              },
            ]
          }
          variant="tertiary"
        >
          /month
        </Text>
        content's children is rendered
      </View>
      <View
        style={
          Array [
            Object {
              "paddingTop": 8,
            },
          ]
        }
      >
        <View
          lastChild={true}
          style={
            Array [
              Object {
                "display": "flex",
              },
            ]
          }
        >
          <TouchableWithoutFeedback>
            <View
              style={
                Object {
                  "flexDirection": "row",
                }
              }
            >
              <View
                disabled={false}
                full={false}
                inverted={false}
                pressed={false}
                small={false}
                style={
                  Array [
                    Object {
                      "backgroundColor": "#231B22",
                      "borderRadius": 9999,
                      "height": 48,
                      "justifyContent": "center",
                      "paddingLeft": 24,
                      "paddingRight": 24,
                    },
                  ]
                }
              >
                <Text
                  disabled={false}
                  inverted={false}
                  pressed={false}
                  style={
                    Array [
                      Object {
                        "color": "#FFFFFF",
                        "fontFamily": "Rubik",
                        "fontSize": 14,
                        "fontWeight": "700",
                        "textAlign": "center",
                      },
                    ]
                  }
                >
                  should have buttons
                </Text>
              </View>
            </View>
          </TouchableWithoutFeedback>
        </View>
      </View>
    </View>
  </View>
</View>
`;
